; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_revparse.c_extract_curly_braces_content.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_revparse.c_extract_curly_braces_content.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_EINVALIDSPEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i64*)* @extract_curly_braces_content to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @extract_curly_braces_content(i32* %0, i8* %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64* %2, i64** %7, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @git_buf_clear(i32* %8)
  %10 = load i8*, i8** %6, align 8
  %11 = load i64*, i64** %7, align 8
  %12 = load i64, i64* %11, align 8
  %13 = getelementptr inbounds i8, i8* %10, i64 %12
  %14 = load i8, i8* %13, align 1
  %15 = sext i8 %14 to i32
  %16 = icmp eq i32 %15, 94
  br i1 %16, label %25, label %17

17:                                               ; preds = %3
  %18 = load i8*, i8** %6, align 8
  %19 = load i64*, i64** %7, align 8
  %20 = load i64, i64* %19, align 8
  %21 = getelementptr inbounds i8, i8* %18, i64 %20
  %22 = load i8, i8* %21, align 1
  %23 = sext i8 %22 to i32
  %24 = icmp eq i32 %23, 64
  br label %25

25:                                               ; preds = %17, %3
  %26 = phi i1 [ true, %3 ], [ %24, %17 ]
  %27 = zext i1 %26 to i32
  %28 = call i32 @assert(i32 %27)
  %29 = load i64*, i64** %7, align 8
  %30 = load i64, i64* %29, align 8
  %31 = add i64 %30, 1
  store i64 %31, i64* %29, align 8
  %32 = load i8*, i8** %6, align 8
  %33 = load i64*, i64** %7, align 8
  %34 = load i64, i64* %33, align 8
  %35 = getelementptr inbounds i8, i8* %32, i64 %34
  %36 = load i8, i8* %35, align 1
  %37 = sext i8 %36 to i32
  %38 = icmp eq i32 %37, 0
  br i1 %38, label %47, label %39

39:                                               ; preds = %25
  %40 = load i8*, i8** %6, align 8
  %41 = load i64*, i64** %7, align 8
  %42 = load i64, i64* %41, align 8
  %43 = getelementptr inbounds i8, i8* %40, i64 %42
  %44 = load i8, i8* %43, align 1
  %45 = sext i8 %44 to i32
  %46 = icmp ne i32 %45, 123
  br i1 %46, label %47, label %49

47:                                               ; preds = %39, %25
  %48 = load i32, i32* @GIT_EINVALIDSPEC, align 4
  store i32 %48, i32* %4, align 4
  br label %84

49:                                               ; preds = %39
  %50 = load i64*, i64** %7, align 8
  %51 = load i64, i64* %50, align 8
  %52 = add i64 %51, 1
  store i64 %52, i64* %50, align 8
  br label %53

53:                                               ; preds = %71, %49
  %54 = load i8*, i8** %6, align 8
  %55 = load i64*, i64** %7, align 8
  %56 = load i64, i64* %55, align 8
  %57 = getelementptr inbounds i8, i8* %54, i64 %56
  %58 = load i8, i8* %57, align 1
  %59 = sext i8 %58 to i32
  %60 = icmp ne i32 %59, 125
  br i1 %60, label %61, label %80

61:                                               ; preds = %53
  %62 = load i8*, i8** %6, align 8
  %63 = load i64*, i64** %7, align 8
  %64 = load i64, i64* %63, align 8
  %65 = getelementptr inbounds i8, i8* %62, i64 %64
  %66 = load i8, i8* %65, align 1
  %67 = sext i8 %66 to i32
  %68 = icmp eq i32 %67, 0
  br i1 %68, label %69, label %71

69:                                               ; preds = %61
  %70 = load i32, i32* @GIT_EINVALIDSPEC, align 4
  store i32 %70, i32* %4, align 4
  br label %84

71:                                               ; preds = %61
  %72 = load i32*, i32** %5, align 8
  %73 = load i8*, i8** %6, align 8
  %74 = load i64*, i64** %7, align 8
  %75 = load i64, i64* %74, align 8
  %76 = add i64 %75, 1
  store i64 %76, i64* %74, align 8
  %77 = getelementptr inbounds i8, i8* %73, i64 %75
  %78 = load i8, i8* %77, align 1
  %79 = call i32 @git_buf_putc(i32* %72, i8 signext %78)
  br label %53

80:                                               ; preds = %53
  %81 = load i64*, i64** %7, align 8
  %82 = load i64, i64* %81, align 8
  %83 = add i64 %82, 1
  store i64 %83, i64* %81, align 8
  store i32 0, i32* %4, align 4
  br label %84

84:                                               ; preds = %80, %69, %47
  %85 = load i32, i32* %4, align 4
  ret i32 %85
}

declare dso_local i32 @git_buf_clear(i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @git_buf_putc(i32*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
